--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
         <script type="text/javascript" src="assets/js/angular/angular/angular-ui-router.min.js"></script>
         <script type="text/javascript" src="assets/js/angular/angular-loading-bar/loading-bar.js"></script>
         <script type="text/javascript" src="assets/js/angular/angular/angular-cookies.min.js"></script>
+
         <link rel="stylesheet" type="text/css" href="assets/js/angular/angular-loading-bar/loading-bar.css">
 
         <script type="text/javascript" src="assets/js/angular/ngDialog/ngDialog.min.js"></script>
@@ -97,7 +98,7 @@
         <!-- angularJs end -->
 
         <script src="assets/js/app.js"></script>
-        
+        <script type="text/javascript" src="assets/js/service.js"></script>
         <script type="text/javascript" src="assets/js/controller/loginController.js"></script>
 
         <script type="text/javascript" src="assets/js/controller/dashboardController.js"></script>
