--- a/index.html
+++ b/index.html
@@ -101,9 +101,13 @@
 
         <script type="text/javascript" src="assets/js/service.js"></script>
         
+        <script type="text/javascript" src="assets/js/controller/header.js"></script>
+
         <script type="text/javascript" src="assets/js/controller/loginController.js"></script>
 
         <script type="text/javascript" src="assets/js/controller/dashboardController.js"></script>
+
+
 
         <script type="text/javascript" src="assets/js/router.js"></script>
 
