--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@
 
         <!-- OneUI CSS framework -->
         <link rel="stylesheet" id="css-main" href="assets/css/oneui.css">
+        <!-- <link href="//cdn.bootcss.com/bootstrap/4.0.0-alpha.6/css/bootstrap.css" rel="stylesheet"> -->
 
         <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+        <link rel="stylesheet" type="text/css" href="assets/css/provider.css">
+        <link rel="stylesheet" type="text/css" href="assets/css/provider-details.css">
         <!-- You can include a specific file from css/themes/ folder to alter the default color theme of the template. eg: -->
         <!-- <link rel="stylesheet" id="css-theme" href="assets/css/themes/flat.min.css"> -->
         <!-- END Stylesheets -->
