--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
 
         <!-- OneUI Core JS: jQuery, Bootstrap, slimScroll, scrollLock, Appear, CountTo, Placeholder, Cookie and App.js -->
         <script src="assets/js/core/jquery.min.js"></script>
-        <script src="assets/js/core/bootstrap.min.js"></script>
+        <script src="assets/js/core/bootstrap.js"></script>
+       <!--  <script type="text/javascript" src="http://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.js"></script> -->
         <script src="assets/js/core/jquery.slimscroll.min.js"></script>
         <script src="assets/js/core/jquery.scrollLock.min.js"></script>
         <script src="assets/js/core/jquery.appear.min.js"></script>
