--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
         <link rel="stylesheet" type="text/css" href="assets/css/style.css">
         <link rel="stylesheet" type="text/css" href="assets/css/provider.css">
         <link rel="stylesheet" type="text/css" href="assets/css/provider-details.css">
+        <link rel="stylesheet" type="text/css" href="assets/css/appeal.css">
+
         <!-- You can include a specific file from css/themes/ folder to alter the default color theme of the template. eg: -->
         <!-- <link rel="stylesheet" id="css-theme" href="assets/css/themes/flat.min.css"> -->
         <!-- END Stylesheets -->
