--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
         <link rel="stylesheet" href="assets/js/plugins/slick/slick.min.css">
         <link rel="stylesheet" href="assets/js/plugins/slick/slick-theme.min.css">
 
+        <link rel="stylesheet" href="assets/js/plugins/bootstrap-datepicker/bootstrap-datepicker3.min.css">
+        <link rel="stylesheet" href="assets/js/plugins/bootstrap-colorpicker/css/bootstrap-colorpicker.min.css">
+        <link rel="stylesheet" href="assets/js/plugins/select2/select2.min.css">
+        <link rel="stylesheet" href="assets/js/plugins/select2/select2-bootstrap.css">
+        <link rel="stylesheet" href="assets/js/plugins/dropzonejs/dropzone.min.css">
+        <link rel="stylesheet" href="assets/js/plugins/jquery-tags-input/jquery.tagsinput.min.css">
+
+
         <!-- OneUI CSS framework -->
         <link rel="stylesheet" id="css-main" href="assets/css/oneui.css">
         <!-- <link href="//cdn.bootcss.com/bootstrap/4.0.0-alpha.6/css/bootstrap.css" rel="stylesheet"> -->
