--- a/base_forms_pickers_more.html
+++ b/base_forms_pickers_more.html
@@ -822,7 +822,7 @@
         <!-- Page JS Plugins -->
         <script src="assets/js/plugins/bootstrap-datepicker/bootstrap-datepicker.min.js"></script>
         <!-- <script src="assets/js/plugins/bootstrap-colorpicker/bootstrap-colorpicker.min.js"></script> -->
-       <!--  <script src="assets/js/plugins/select2/select2.full.min.js"></script> -->
+        <script src="assets/js/plugins/select2/select2.full.min.js"></script>
         <!-- <script src="assets/js/plugins/masked-inputs/jquery.maskedinput.min.js"></script> -->
         <!-- <script src="assets/js/plugins/dropzonejs/dropzone.min.js"></script> -->
         <!-- <script src="assets/js/plugins/jquery-tags-input/jquery.tagsinput.min.js"></script> -->
